README, some cleanup and finalization

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "joblib>=1.5.2",
     "numpy==2.3.3",
     "pandas==2.3.1",
-    "protobuf>=6.32.1",
+    "protobuf==5.28.2",
+    "pydot>=3.0.0",
     "python-dateutil==2.9.0.post0",
     "pytz==2025.2",
     "pyyaml==6.0.2",
