--- a/configs/hardware-config/waferscale_20v100_80hbm.yaml
+++ b/configs/hardware-config/waferscale_20v100_80hbm.yaml
@@ -4,7 +4,8 @@
 
 sw_param:
     kernel_launch_overhead: 9e-6 #9us
-    precision: 2 
+    precision: 2
+    h2d_bandwidth: 13297674240  # Bytes/s; set -1 to disable H2D timing 
 
 tech_param:
     core:
@@ -181,4 +182,15 @@ scheduling_param:
     kp1: 20
     kp2: 1
 
-
+execution_backend:
+  model: astra # analytical | astra
+  astra:
+    backend: astra
+    mode: hybrid  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
+    collectives:
+      # Allowed values per op: auto | ring | direct | halvingDoubling | doubleBinaryTree
+      # Note: if topology is 'switch' and value is 'auto', we default to 'halvingDoubling'.
+      all_gather: auto
+      all_reduce: auto
+      reduce_scatter: auto
+      all_to_all: auto
