--- a/configs/hardware-config/v100.yaml
+++ b/configs/hardware-config/v100.yaml
@@ -2,7 +2,8 @@
 
 sw_param:
     kernel_launch_overhead: 9e-6 #9us
-    precision: 2 
+    precision: 2
+    h2d_bandwidth: 13297674240  # Bytes/s; set -1 to disable H2D timing 
 
 tech_param:
     core:
@@ -158,3 +159,19 @@ scheduling_param:
     kp_softmax_type: -1
     kp_embedding_type: -1
     kp_projection_type: -1
+    t: "RC" #modification of t and kp1 and kp2 will update the scheduling algorithm if they are not null
+    kp1: 1
+    kp2: 1
+
+execution_backend:
+  model: astra # analytical | astra
+  astra:
+    backend: astra
+    mode: hybrid  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
+    collectives:
+      # Allowed values per op: auto | ring | direct | halvingDoubling | doubleBinaryTree
+      # Note: if topology is 'switch' and value is 'auto', we default to 'halvingDoubling'.
+      all_gather: auto
+      all_reduce: auto
+      reduce_scatter: auto
+      all_to_all: auto
