--- a/configs/model-config/LLM_inf.yaml
+++ b/configs/model-config/LLM_inf.yaml
@@ -14,5 +14,4 @@ model_param:
     n_tokens: 10000000000  # Number of tokens to train on. Set to 1T for now.
     all_reduce: "every layer"  # When data parallel pre-apply grad all-reduce happens: "the end" or "every layer"
 inference_param:
-    sample_every: 999999  # Sample decode steps every N steps for efficiency
-    force_sample_last: true  # Always sample the final decode step
+    sample_every: -1  # Sample decode steps every N steps for efficiency. -1 means only sample at start and end.
