async graphviz, cleanup, no more output dir

--- a/configs/hardware-config/a100_80GB_inf.yaml
+++ b/configs/hardware-config/a100_80GB_inf.yaml
@@ -119,7 +119,7 @@ perimeter_breakdown:
   intra_node: 0.33
   inter_node: 0.33
 system_hierarchy:
-  num_devices_per_node: 16
+  num_devices_per_node: 1
   num_nodes: 1
   inter_derate: 1
   intra_derate: 1
@@ -146,7 +146,7 @@ memory_hierarchy:
     scope: global
 scheduling_param:
   auto: false
-  dp: 16
+  dp: 1 # acts as replica count during inference
   lp: 1 # pipeline stages 
   mb: 1 # number of micro-batches
   t: "CR"
@@ -171,7 +171,7 @@ execution_backend:
   model: analytical # analytical | astra
   astra:
     backend: astra
-    mode: full_astrasim_flattened  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
+    mode: hybrid  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
     collectives:
       # Allowed values per op: auto | ring | direct | halvingDoubling | doubleBinaryTree
       # Note: if topology is 'switch' and value is 'auto', we default to 'halvingDoubling'.
