--- a/configs/hardware-config/a100_80GB.yaml
+++ b/configs/hardware-config/a100_80GB.yaml
@@ -119,7 +119,7 @@ perimeter_breakdown:
   intra_node: 0.33
   inter_node: 0.33
 system_hierarchy:
-  num_devices_per_node: 4
+  num_devices_per_node: 32
   num_nodes: 1
   inter_derate: 1
   intra_derate: 1
@@ -146,9 +146,9 @@ memory_hierarchy:
     scope: global
 scheduling_param:
   auto: false
-  dp: 1 # acts as replica count during inference
-  lp: 2 # pipeline stages 
-  mb: 2 # number of micro-batches
+  dp: 2 # acts as replica count during inference
+  lp: 8 # pipeline stages 
+  mb: 8 # number of micro-batches
   t: "CR"
   kp1: 2
   kp2: 1
@@ -171,7 +171,7 @@ execution_backend:
   model: astra # analytical | astra
   astra:
     backend: astra
-    mode: hybrid  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
+    mode: full_astrasim_flattened  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
     collectives:
       # Allowed values per op: auto | ring | direct | halvingDoubling | doubleBinaryTree
       # Note: if topology is 'switch' and value is 'auto', we default to 'halvingDoubling'.
