--- a/configs/hardware-config/a100_80GB.yaml
+++ b/configs/hardware-config/a100_80GB.yaml
@@ -119,7 +119,7 @@ perimeter_breakdown:
   intra_node: 0.33
   inter_node: 0.33
 system_hierarchy:
-  num_devices_per_node: 16
+  num_devices_per_node: 4
   num_nodes: 1
   inter_derate: 1
   intra_derate: 1
@@ -148,14 +148,14 @@ memory_hierarchy:
 scheduling_param:
   auto: false
   ### LLM PARAMS ###
-  dp: 2 # acts as replica count during inference
+  dp: 1 # acts as replica count during inference
   lp: 2 # pipeline stages 
   mb: 2 # number of micro-batches
-  tp: 4 # tensor parallelism
+  tp: 2 # tensor parallelism
   tp_sp: true # sequence parallelism
   ### LSTM/GEMM LEGACY PARAMS ###
   t: "CR"
-  kp1: 4
+  kp1: 1
   kp2: 1
   kp_hidden_dim1: 1
   kp_hidden_dim2: 1
@@ -175,7 +175,7 @@ execution_backend:
   model: astra # analytical | astra
   astra:
     backend: astra
-    mode: hybrid  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
+    mode: full_astrasim_flattened  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
     collectives:
       # Allowed values per op: auto | ring | direct | halvingDoubling | doubleBinaryTree
       # Note: if topology is 'switch' and value is 'auto', we default to 'halvingDoubling'.
@@ -190,5 +190,5 @@ execution_backend:
       
 inference:
   kvcache_precision: 2  # bytes per element
-  kvcache_type: "hbm_only"
+  kvcache_type: hbm_only
   kvcache_fetch_overlap: false
