--- a/configs/model-config/LLM.yaml
+++ b/configs/model-config/LLM.yaml
@@ -1,7 +1,7 @@
 model_param:
     mode: "LLM"  # Mode of operation
     run_type: "training"
-    batch_size: 2048  # Batch size
+    batch_size: 20  # Batch size
     seq_len: 16384
     decode_len: 1024           # Number of autoregressive decode steps.
     hidden_dim: 8192
@@ -9,10 +9,11 @@ model_param:
         attention_type: "gqa"  # one of "mha","gqa","mla"
         num_heads: 64
         kv_heads: 8  # set only when attention_type is "gqa"
+        use_flashattention: False  # Whether to use flash attention
     ffn_dim: 32768 # First FFN layer output dimension, typically 4 * D used when ffn_mult is NULL.
     ffn_mult: null # Multiplier for FFN dimension  This is prioritized over ffn_dim.
     vocab_size: 800000  # Vocabulary size
-    num_layers: 2  # only 1 layer for now
+    num_layers: 3  
     n_tokens: 10000000000  # Number of tokens to train on. Set to 1T for now.
     all_reduce: "every layer"  # When data parallel pre-apply grad all-reduce happens: "the end" or "every layer"
 
