adding inference mode to memory simulate and created flash attention kernel

--- a/configs/model-config/LLM.yaml
+++ b/configs/model-config/LLM.yaml
@@ -9,7 +9,8 @@ model_param:
         attention_type: "gqa"  # one of "mha","gqa","mla"
         num_heads: 64
         kv_heads: 8  # set only when attention_type is "gqa"
-        use_flashattention: False  # Whether to use flash attention
+        use_flashattention: false  # Whether to use flash attention
+        attention_tile_size: 256  # Tile size for attention computation
     ffn_dim: 32768 # First FFN layer output dimension, typically 4 * D used when ffn_mult is NULL.
     ffn_mult: null # Multiplier for FFN dimension  This is prioritized over ffn_dim.
     vocab_size: 800000  # Vocabulary size
