model_type == "llama" and fixed inference w/ context parallelism

--- a/configs/hardware-config/a100_80GB.yaml
+++ b/configs/hardware-config/a100_80GB.yaml
@@ -119,7 +119,7 @@ perimeter_breakdown:
   intra_node: 0.33
   inter_node: 0.33
 system_hierarchy:
-  num_devices_per_node: 4
+  num_devices_per_node: 16
   num_nodes: 1
   inter_derate: 1
   intra_derate: 1
@@ -148,10 +148,10 @@ memory_hierarchy:
 scheduling_param:
   auto: false
   ### LLM PARAMS ###
-  dp: 1 # acts as replica count during inference
+  dp: 2 # acts as replica count during inference
   lp: 2 # pipeline stages 
   mb: 2 # number of micro-batches
-  tp: 1 # tensor parallelism
+  tp: 2 # tensor parallelism
   tp_sp: true # tensor-sequence parallelism
   cp : 2 # context parallelism
   ### LSTM/GEMM LEGACY PARAMS ###
@@ -173,7 +173,7 @@ scheduling_param:
 
 
 execution_backend:
-  model: astra # analytical | astra
+  model: analytical # analytical | astra
   astra:
     backend: astra
     mode: full_astrasim_flattened  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
