--- a/configs/model-config/LLM_inf.yaml
+++ b/configs/model-config/LLM_inf.yaml
@@ -1,6 +1,7 @@
 model_param:
     mode: "LLM"  # Mode of operation
     run_type: "inference"
+    model_type: "gpt"  # gpt assumes dense-style architecture with GELU; llama assumes llama-style architecture with SwiGLU
     batch_size: 64  # Batch size
     seq_len: 4096
     decode_len: 1024           # Number of autoregressive decode steps.
