--- a/configs/model-config/Llama2-7B.yaml
+++ b/configs/model-config/Llama2-7B.yaml
@@ -1,7 +1,8 @@
 model_param:
   mode: "LLM"
   run_type: "training"
-  batch_size: 1
+  model_type: "llama"  # gpt assumes dense-style architecture with GELU; llama assumes llama-style architecture with SwiGLU
+  batch_size: 1024
   seq_len: 2048        # 32768 prefill + 1024 decode
   decode_len: 0
   # prefill len = seq_len - decode_len
