--- a/configs/model-config/Llama2-7B_inf.yaml
+++ b/configs/model-config/Llama2-7B_inf.yaml
@@ -1,6 +1,7 @@
 model_param:
   mode: "LLM"
   run_type: "inference"
+  model_type: "llama"  # gpt assumes dense-style architecture with GELU; llama assumes llama-style architecture with SwiGLU
   batch_size: 16
   seq_len: 2048        # 32768 prefill + 1024 decode
   decode_len: 1024
