--- a/configs/hardware-config/v100.yaml
+++ b/configs/hardware-config/v100.yaml
@@ -1,6 +1,9 @@
 
 sw_param:
   kernel_launch_overhead: 9e-6   #9us
+  # dp_zero_stage selects ZeRO-style data-parallel sharding: 0=DDP, 1=ZeRO-1, 2=ZeRO-2, 3=ZeRO-3
+  # only used if data parallelism (dp) > 1
+  dp_zero_stage: 0
   precision:
     # tensor_format accepts numeric byte counts or dtype strings (fp16, bf16, fp32).
     # Take care that the number of flops defined below has been carefully tuned for FP16/BF16 formats.
