Cleaned up a lot of configs, final prints, and added configs/documentation for inference. Also fixed it so that deepflow runs even if astrasim is not installed properly.

--- a/configs/hardware-config/a100_80GB.yaml
+++ b/configs/hardware-config/a100_80GB.yaml
@@ -167,7 +167,7 @@ memory_hierarchy:
     type: DRAM
     scope: global
 scheduling_param:
-  auto: false
+  auto: false # Not supported for LLM mode.
   ### LLM PARAMS ###
   dp: 2 # acts as replica count during inference
   lp: 2 # pipeline stages 
@@ -211,5 +211,4 @@ execution_backend:
       preferred_dataset_splits: 32 # Should be same as active_chunks_per_dimension
       
 inference:
-  kvcache_type: hbm_only
-  kvcache_fetch_overlap: false
+  kvcache_type: hbm_only # Only supported mode for now.
