--- a/configs/model-config/LLM.yaml
+++ b/configs/model-config/LLM.yaml
@@ -1,20 +1,20 @@
 model_param:
     mode: "LLM"  # Mode of operation
-    run_type: "training"
-    tied_embeddings: false  # Share input and output embedding weights
+    run_type: "training" # Type of run: "training" or "inference"
+    tied_embeddings: false  # Share input and output embedding weights (WIP: affects memory estimation only)
     model_type: "gpt"  # gpt assumes dense-style architecture with GELU; llama assumes llama-style architecture with SwiGLU
-    batch_size: 1024  # Batch size
-    seq_len: 16384
-    hidden_dim: 8192
-    attention:
+    batch_size: 1024  # Sequences per global batch
+    seq_len: 16384  # Sequence length (tokens per sequence)
+    hidden_dim: 8192 # Transformer hidden dimension
+    attention: # Attention-related parameters
         attention_type: "mha"  # Supported attention types: "mha" or "gqa" ("mla" not implemented)
-        num_heads: 64
-        kv_heads: 8  # set only when attention_type is "gqa"
-        use_flashattention: false  # Whether to use flash attention
-        attention_tile_size: 256  # Tile size for attention computation
+        num_heads: 64 # Total number of attention heads
+        kv_heads: 8  # Number of key/value heads (used only when attention_type = "gqa")
+        use_flashattention: false  # Enable FlashAttention optimization
+        attention_tile_size: 256  # Tile size used in attention computation
     num_experts: 1   # Number of experts in MoE layers. Set to 1 to disable MoE.
-    top_k: 1   # Top-k experts to use in MoE layers
-    ffn_dim: 32768 # First FFN layer output dimension, typically 4 * D used when ffn_mult is NULL.
+    top_k: 1   # Number of active experts per token in MoE
+    ffn_dim: 32768 # Output dimension of the first FFN layer (typically 4×hidden_dim)
     ffn_mult: null # Multiplier for FFN dimension  This is prioritized over ffn_dim.
     vocab_size: 800000  # Vocabulary size
-    num_layers: 2
+    num_layers: 2 # Number of transformer layers
