--- a/configs/model-config/Llama3.1-8B_inf.yaml
+++ b/configs/model-config/Llama3.1-8B_inf.yaml
@@ -1,23 +1,23 @@
 model_param:
-  mode: "LLM"
-  run_type: "inference"
-  tied_embeddings: true
+  mode: "LLM"  # Mode of operation
+  run_type: "inference" # Type of run: "training" or "inference"
+  tied_embeddings: true  # Share input and output embedding weights (WIP: affects memory estimation only)
   model_type: "llama"  # gpt assumes dense-style architecture with GELU; llama assumes llama-style architecture with SwiGLU
-  batch_size: 1
-  seq_len: 2048
-  decode_len: 1024
-  hidden_dim: 4096
-  attention:
+  batch_size: 1  # Sequences per global batch
+  seq_len: 2048  # Total context length (prefill + decode_len for inference)
+  decode_len: 1024 # Number of tokens to decode during inference
+  hidden_dim: 4096 # Transformer hidden dimension
+  attention: # Attention-related parameters
     attention_type: "gqa"  # Supported attention types: "mha" or "gqa" ("mla" not implemented)
-    num_heads: 32
-    kv_heads: 8
-    use_flashattention: false  # Whether to use flash attention
-    attention_tile_size: null  # Tile size for attention computation
-  num_experts: 1  # Number of experts in MoE layers. Set to 1 to disable MoE.
-  top_k: 1  # Top-k experts to use in MoE layers
-  ffn_dim: 14336
-  ffn_mult: null
-  vocab_size: 128256
-  num_layers: 32
+    num_heads: 32 # Total number of attention heads
+    kv_heads: 8  # Number of key/value heads (used only when attention_type = "gqa")
+    use_flashattention: false  # Enable FlashAttention optimization
+    attention_tile_size: null  # Tile size used in attention computation
+  num_experts: 1   # Number of experts in MoE layers. Set to 1 to disable MoE.
+  top_k: 1   # Number of active experts per token in MoE
+  ffn_dim: 14336 # Output dimension of the first FFN layer (typically 4×hidden_dim)
+  ffn_mult: null # Multiplier for FFN dimension  This is prioritized over ffn_dim.
+  vocab_size: 128256  # Vocabulary size
+  num_layers: 32 # Number of transformer layers
 inference_param:
-  sample_every: -1
+  sample_every: -1  # Sample decode steps every N steps for efficiency. -1 means only sample at start and end.
