--- a/configs/model-config/Llama3.1-70B_inf.yaml
+++ b/configs/model-config/Llama3.1-70B_inf.yaml
@@ -15,7 +15,7 @@ model_param:
     attention_tile_size: null  # Tile size used in attention computation
   num_experts: 1   # Number of experts in MoE layers. Set to 1 to disable MoE.
   top_k: 1   # Number of active experts per token in MoE
-  ffn_dim: 28672 # Output dimension of the first FFN layer (typically 4×hidden_dim)
+  intermediate_dim: 28672 # Output dimension of the first FFN layer (typically 4×hidden_dim)
   vocab_size: 128256  # Vocabulary size
   num_layers: 80 # Number of transformer layers
 inference_param:
