--- a/configs/model-config/LLM_inf.yaml
+++ b/configs/model-config/LLM_inf.yaml
@@ -15,7 +15,7 @@ model_param:
         attention_tile_size: 256  # Tile size used in attention computation
     num_experts: 1   # Number of experts in MoE layers. Set to 1 to disable MoE.
     top_k: 1   # Number of active experts per token in MoE
-    intermediate_dim: 32768 # Output dimension of the first FFN layer (typically 4×hidden_dim)
+    intermediate_size: 32768 # Output dimension of the first FFN layer (typically 4×hidden_dim)
     vocab_size: 129280  # Vocabulary size
     num_layers: 96 # Number of transformer layers
 inference_param:
