--- a/configs/model-config/Llama2-7B_inf.yaml
+++ b/configs/model-config/Llama2-7B_inf.yaml
@@ -15,7 +15,7 @@ model_param:
     attention_tile_size: 256  # Tile size used in attention computation
   num_experts: 16   # Number of experts in MoE layers. Set to 1 to disable MoE.
   top_k: 2   # Number of active experts per token in MoE
-  intermediate_dim: 11008 # Output dimension of the first FFN layer (typically 4×hidden_dim)
+  intermediate_size: 11008 # Output dimension of the first FFN layer (typically 4×hidden_dim)
   vocab_size: 32000  # Vocabulary size
   num_layers: 32 # Number of transformer layers
 inference_param:
