--- a/configs/model-config/Llama3.1-8B_inf.yaml
+++ b/configs/model-config/Llama3.1-8B_inf.yaml
@@ -11,12 +11,10 @@ model_param:
     attention_type: "gqa"  # Supported attention types: "mha" or "gqa" ("mla" not implemented)
     num_heads: 32 # Total number of attention heads
     kv_heads: 8  # Number of key/value heads (used only when attention_type = "gqa")
-    use_flashattention: false  # Enable FlashAttention optimization
+    use_flashattention: true  # Enable FlashAttention optimization
     attention_tile_size: 128  # Tile size used in attention computation
   num_experts: 1   # Number of experts in MoE layers. Set to 1 to disable MoE.
   top_k: 1   # Number of active experts per token in MoE
   intermediate_size: 14336 # Output dimension of the first FFN layer (typically 4×hidden_dim)
   vocab_size: 128256  # Vocabulary size
   num_layers: 32 # Number of transformer layers
-inference_param:
-  sample_every: -1  # Sample decode steps every N steps for efficiency. -1 means only sample at start and end.
