--- a/configs/old-detailed-hw-configs/a100_80GB.yaml
+++ b/configs/old-detailed-hw-configs/a100_80GB.yaml
@@ -89,7 +89,7 @@ tech_param:
       latency: 5e-6
       nominal_frequency: 3e9
       nominal_voltage: 1
-      nominal_energy_per_link: 8e-12
+      energy_per_bit: 8e-12
       nominal_area_per_link: 100e-6
       num_links_per_mm: 400
       threshold_voltage: 0.25
@@ -99,7 +99,7 @@ tech_param:
       latency: 5e-6
       nominal_frequency: 20e9
       nominal_voltage: 1.2
-      nominal_energy_per_link: 13e-12
+      energy_per_bit: 13e-12
       nominal_area_per_link: 0.045
       num_links_per_mm: 20
       threshold_voltage: 0.35
@@ -189,7 +189,7 @@ execution_backend:
   astra:
     backend: astra
     mode: full_astrasim_flattened  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
-    collectives:
+    collective_override:
       # Allowed values per op: auto | ring | direct | halvingDoubling | doubleBinaryTree
       # Note: leave to auto unless you have a specific reason to change it.
       all_gather: auto
