--- a/configs/old_lstm_hw_configs/v100.yaml
+++ b/configs/old_lstm_hw_configs/v100.yaml
@@ -1,11 +1,6 @@
-# DeepFlow configuration for NVIDIA H100 PCIe 80 GB
-# specifications from the following sources:
-# [NVIDIA] https://resources.nvidia.com/en-us-hopper-architecture/nvidia-h100-tensor-c
-# [TePU] https://www.techpowerup.com/gpu-specs/h100-sxm5-80-gb.c3900
-# [Semi] https://semianalysis.com/2025/06/23/nvidia-tensor-core-evolution-from-volta-to-blackwell/#4th-generation-tensor-core-warpgroup-level-asynchronous-mma
 
 sw_param:
-  kernel_launch_overhead: 9e-6   # (s)
+  kernel_launch_overhead: 9e-6   #9us
   # dp_zero_stage selects ZeRO-style data-parallel sharding: 0=DDP, 1=ZeRO-1, 2=ZeRO-2, 3=ZeRO-3
   # only used if data parallelism (dp) > 1
   dp_zero_stage: 0
@@ -32,39 +27,62 @@ sw_param:
 
 tech_param:
   core:
-    operating_frequency: 1.98e9     # (Hz) GPU boost clock frequency [TePU]
-    num_bundles: 132     # number of bundles (SMs) [TePU]
-    nominal_flop_rate_per_mcu: 1024     # F16 FLOP / cycle / SM is 4096 [Semi]
+    operating_frequency: 1.33e9     #Hz
+    num_bundles: 80     # V100 has 80 SMs
+    nominal_flop_rate_per_mcu: 128
     nominal_energy_per_flop: 1.8e-13
-    num_mcu_per_bundle: 4     # number of tensorcores per SM [TePU]
-    FMA_d1: 8                # tensor core can compute the results for an d1 x d2 x d1 mixed-precision matrix multiplication per clock
+    num_mcu_per_bundle: 8     #a bundle can be thought of as an SM, number of tensorcores per SM
+    FMA_d1: 4                # tensor core can compute the results for an d1 x d2 x d1 mixed-precision matrix multiplication per clock
     FMA_d2: 4
     dataflow: best              #{wst. ast, ost, best, none}: wst: weight stationary, ast: activation stationary, ost: output stationary
-    util: 0.75     #util should be 0.75 (12/16) for tensorcore
+    util: 0.85     #util should be 0.75 (12/16) for tensorcore
   DRAM:
-    size: 80 GB     # [TePU]
-    bandwidth: 3440 GB     # (/s) [TePU]
-    dynamic_energy_per_bit: 4.5e-12     # (J) [https://passlab.github.io/mchpc/mchpc2019/presentations/MCHPC_Pawlowski_keynote.pdf, slide 36]
-    latency: 100e-9     # (s)
+    size: 16 GB     # V100 has 16GB HBM2
+    bandwidth: 900 GB     # V100 has ~900 GB/s bandwidth
+    dynamic_energy_per_bit: 4.2e-12     #Joules
+    latency: 100e-9
     util: 1
   SRAM-L2:
-    size: 50 MB     # [TePU]
-    bandwidth: 8138 GB     # NCU L2 peak traffic
+    size: 6 MB     # V100 L2 cache
+    bandwidth: 3072 GB     # Estimated L2 bandwidth
     dynamic_energy_per_bit: 130e-15
     latency: 0
-    util: 1
+    util: 0.45
   SRAM-L1:
-    size: 30096 KB     # max configurable shared memory per SM * number of SMs [NVIDIA]
-    bandwidth: 22392 GB     # NCU L1/TEX peak traffic
+    size: 6400 KB     # 80 KB per SM * 80 SMs
+    bandwidth: 15 TB     # Estimated L1 bandwidth
     dynamic_energy_per_bit: 130e-15
     latency: 0
     util: 1
   SRAM-R:
-    size: 33 MB     # register file memory per SM * number of SMs [NVIDIA]
-    bandwidth: 244 TB     # traffic for 2 reads and 1 write for GEMMs computed per clock
+    size: 20 MB     # Register file
+    bandwidth: 80 TB     # Estimated register bandwidth
     dynamic_energy_per_bit: 110e-15
     latency: 0
     util: 1
+  network:
+    intra_node:
+      latency: 5e-6
+      util: 1
+      bandwidth: 300 Gb
+    inter_node:
+      latency: 5e-6
+      util: 0.96
+      bandwidth: 300 Gb
+
+system_hierarchy:
+  num_devices_per_node: 1
+  num_nodes: 1
+  kp1_inter: false
+  kp2_inter: false
+  dp_inter: false
+  lp_inter: false
+  tp_inter: false
+
+network_topology:
+  # Allowed values: ring | fc | switch
+  inter_node: ring
+  intra_node: ring
 
 memory_hierarchy:
   l0:   #Register Memory
@@ -80,28 +98,31 @@ memory_hierarchy:
     type: DRAM
     scope: global
 
-parallelism:
+scheduling_param:
   auto: false
   ### LLM PARAMS ###
-  dp: 1 # data parallelism. Acts as replica count during inference
-  lp: 1 # pipeline parallelism. Number of pipeline stages
-  mb: 1 # micro-batches (for best results set to >= lp)
+  dp: 1 # acts as replica count during inference
+  lp: 1 # pipeline stages
+  mb: 1 # number of micro-batches
   tp: 1 # tensor parallelism
   tp_sp: true # tensor-sequence parallelism
   cp : 1 # context parallelism
-
-network:
-  - id: dim0
-    label: device_fabric
-    size: 1
-    topology:
-      type: Mesh
-      bandwidth: 400 Gb
-      latency: 5e-6
-      energy_per_bit: 8e-12 # (J/bit)
-      util: 1.0
-    collective_override: {}
-    parallelisms: [tp, cp, lp, dp, kp1, kp2]
+  ### LSTM/GEMM LEGACY PARAMS ###
+  t: CR
+  kp1: 1
+  kp2: 1
+  kp_hidden_dim1: 1
+  kp_hidden_dim2: 1
+  kp_softmax_dim1: 1
+  kp_softmax_dim2: 1
+  kp_embedding_dim1: 1
+  kp_embedding_dim2: 1
+  kp_projection_dim1: 1
+  kp_projection_dim2: 1
+  kp_hidden_type: -1
+  kp_softmax_type: -1
+  kp_embedding_type: -1
+  kp_projection_type: -1
 
 execution_backend:
   model: astra # analytical | astra
