--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-dateutil==2.9.0.post0",
     "pytz==2025.2",
     "pyyaml==6.0.2",
+    "scotchpy64>=1.0.1",
     "seaborn>=0.13.2",
     "six==1.17.0",
     "tqdm>=4.67.1",
