--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pandas==2.3.1",
     "protobuf==5.28.2",
     "pydot>=3.0.0",
+    "pytest>=9.0.0",
     "python-dateutil==2.9.0.post0",
     "pytz==2025.2",
     "pyyaml==6.0.2",
@@ -20,4 +21,9 @@ dependencies = [
     "six==1.17.0",
     "tqdm>=4.67.1",
     "tzdata==2025.2",
+]
+
+[tool.pytest.ini_options]
+testpaths = [
+    "tests",
 ]
