--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - main
       - llm-dev
   pull_request:
-
+    
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -15,6 +15,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+
+      - name: Install AstraSim system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            gcc-11 g++-11 make cmake \
+            clang-format \
+            libboost-dev libboost-program-options-dev \
+            libprotobuf-dev protobuf-compiler \
+            openmpi-bin openmpi-doc libopenmpi-dev
 
       - name: Install uv
         uses: astral-sh/setup-uv@v2
